ADS/k8s/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ads
  labels:
    name: ads
    environment: production
